improve: package.json fields

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "license": "MIT",
   "main": "index.js",
+  "repository": "https://github.com/sia162/siyaconnect",
   "author": {
     "name": "Siya Banodha",
     "email": "nowitissiya@gmail.com"
