success and info logs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "chalk": "^5.0.0",
-    "cli-welcome": "^2.2.2"
+    "cli-welcome": "^2.2.2",
+    "log-symbols": "^5.1.0"
   },
   "keywords": [
     "siya",
